修改了登录后无法退出的问题。

--- a/src/main/webapp/Train1.html
+++ b/src/main/webapp/Train1.html
@@ -101,22 +101,34 @@ marquee div {
 			src="app/resource/image/train.jpg" usemap="#planetmap" alt="Planets" />
 
 		<map name="planetmap" id="planetmap">
-			<!--<area shape="rect" coords="500,100,600,200" href="#" id="noticeShow" />
-			<area shape="rect" coords="500,220,600,300" href="#" id="fileShow" />
-			<area shape="rect" coords="500,320,600,400" href="#" id="trainShow" />
-			<area shape="rect" coords="500,420,600,500"
+		<!-- 分辨率	1280*1024 -->
+		<area shape="rect" coords="955,295,1155,365" href="#" id="noticeShow" />
+			<area shape="rect" coords="955,385,1155,455" href="#" id="fileShow" />
+			<area shape="rect" coords="955,485,1155,555" href="#" id="trainShow" />
+			<area shape="rect" coords="955,580,1155,650"
 				href="app://f6f2a76c-bf34-4cc7-adba-8d2ab99d0fbc" id="examShow" />
-			<area shape="rect" coords="500,520,600,600"
-				href="app://f6f2a76c-bf34-4cc7-adba-8d2ab99d0fbd" id="skillShow" />-->
-			<area shape="rect" coords="1448,311,1716,377" href="#"
-				id="noticeShow" />
-			<area shape="rect" coords="1448,411,1716,477" href="#" id="fileShow" />
-			<area shape="rect" coords="1448,511,1716,577" href="#" id="trainShow" />
-			<area shape="rect" coords="1448,611,1716,677"
-				href="app://f6f2a76c-bf34-4cc7-adba-8d2ab99d0fbc" id="examShow" />
-			<area shape="rect" coords="1448,711,1716,777"
+			<area shape="rect" coords="955,675,1155,745"
 				href="app://f6f2a76c-bf34-4cc7-adba-8d2ab99d0fbd" id="skillShow" />
-			<area shape="rect" coords="1448,811,1716,877" href="#" id="LEDShow" />
+			<area shape="rect" coords="955,770,1155,840" href="#" id="LEDShow" />
+		<!-- 未知 -->
+<!-- 			<area shape="rect" coords="500,100,600,200" href="#" id="noticeShow" /> -->
+<!-- 			<area shape="rect" coords="500,220,600,300" href="#" id="fileShow" /> -->
+<!-- 			<area shape="rect" coords="500,320,600,400" href="#" id="trainShow" /> -->
+<!-- 			<area shape="rect" coords="500,420,600,500" -->
+<!-- 				href="app://f6f2a76c-bf34-4cc7-adba-8d2ab99d0fbc" id="examShow" /> -->
+<!-- 			<area shape="rect" coords="500,520,600,600" -->
+<!-- 				href="app://f6f2a76c-bf34-4cc7-adba-8d2ab99d0fbd" id="skillShow" /> -->
+				
+				<!-- 未知 -->
+<!-- 			<area shape="rect" coords="1448,311,1716,377" href="#" -->
+<!-- 				id="noticeShow" /> -->
+<!-- 			<area shape="rect" coords="1448,411,1716,477" href="#" id="fileShow" /> -->
+<!-- 			<area shape="rect" coords="1448,511,1716,577" href="#" id="trainShow" /> -->
+<!-- 			<area shape="rect" coords="1448,611,1716,677" -->
+<!-- 				href="app://f6f2a76c-bf34-4cc7-adba-8d2ab99d0fbc" id="examShow" /> -->
+<!-- 			<area shape="rect" coords="1448,711,1716,777" -->
+<!-- 				href="app://f6f2a76c-bf34-4cc7-adba-8d2ab99d0fbd" id="skillShow" /> -->
+<!-- 			<area shape="rect" coords="1448,811,1716,877" href="#" id="LEDShow" /> -->
 		</map>
 	</div>
 
